--- a/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
@@ -34,6 +34,7 @@
                     Width="50" Height="50"
                     Grid.Column="2"
                     Grid.Row="1"
+                    Margin="20,25,0,0"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
                     Style="{StaticResource CloseButton}"
@@ -44,7 +45,7 @@
             <TextBlock FontSize="{Binding TextFontSize}"
                 Foreground="#161A25"
                 TextAlignment="Left"
-                Margin="0, 20, 0 ,10"
+                Margin="0,50, 0 ,30"
                 Grid.Row="1"
                 Grid.Column="1"
                 FontWeight="Medium"
@@ -118,7 +119,7 @@
                
                 
             </StackPanel>
-            <StackPanel Grid.Row="4"
+            <StackPanel Grid.Row="5"
                 Grid.Column="1"
                 Width="{Binding Width}"
                 Height="160">
@@ -154,7 +155,7 @@
             </StackPanel>
 
             <StackPanel Grid.Column="1"
-                        Grid.Row="5">
+                        Grid.Row="6">
                 <Button Command="{Binding UploadImageCommand}" Cursor="Hand" Margin="0,15,0,0" Padding="2" Background="#DFE6F0" BorderBrush="#DFE6F0" BorderThickness="1" Foreground="Black" ToolTip="Upload a picture for new attraction">
                     <StackPanel Orientation="Horizontal">
                         <Viewbox Width="25" Height="25">
@@ -167,11 +168,11 @@
             </StackPanel>
 
             <Button Grid.Column="1"
-                Grid.Row="6"
+                Grid.Row="7"
                 VerticalAlignment="Bottom"
                 Width="{Binding Width}"
                 Height="40"
-                Margin="0, 22 ,0 ,0"
+                Margin="0, 50 ,0 ,50"
                 IsEnabled="{Binding IsButtonEnabled}"
                 ToolTip="Click to create the new place"
                 Content="Create"
